--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_gray">#FFFFFFFF</color>
+    <color name="gray">#808080</color>
+    <color name="dot_color">#2196f3</color>
+
+
 </resources>
